# obsidian-tools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: implementation-plan-collection-restructure.md  prd-collection-restructure.md  review-architecture.md  review-collection-restructure.md
print_md/: README.md  install.sh  print_md.py
print_md/tests/: test_cli.py
scene_print/: scene_print_README.md
screne_print/: .gitignore  scene_print.py  scene_print_README.md
tools/print_md/: README.md  pyproject.toml
tools/print_md/src/print_md/: __init__.py  cli.py
tools/print_md/tests/: test_cli.py
