[project]
name = "print-md"
version = "0.2.0"
description = "Convert Obsidian markdown files to print-ready PDFs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "markdown>=3.5.0",
  "python-frontmatter>=1.1.0",
  "weasyprint>=62.0",
]

[project.scripts]
print_md = "print_md.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/print_md"]
